# information_search

./: .gitignore  README.md  docker-compose.yaml
Report/: report.tex
Report/src/: problem.tex  src.tex  thinks.tex  titlepage.tex
SearchRobot/: Dockerfile  pyproject.toml
SearchRobot/app/: test_index.py  test_text_processor.py  zipf.py
SearchRobot/app/api/: main.py
SearchRobot/app/api/v1/: crawler.py  index.py
SearchRobot/app/config/: config.yaml
SearchRobot/app/cpp/: boolean_index.cpp  build_cpp.sh  text_processor.cpp
SearchRobot/app/logic/: boolean_index.py  db.py  items.py  managers.py  pipelines.py  run_crawler.py  run_rqworker.py  settings.py  tasks.py
SearchRobot/app/logic/spiders/: redis_sitemap_spider.py
